Correction of typos

--- a/20200402 - 04 - Einführung Python 2.ipynb
+++ b/20200402 - 04 - Einführung Python 2.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python\n",
+    "# Introduction to Python 2\n",
     "\n",
     "**Applied Programming - Summer term 2020 - FOM Hochschule für Oekonomie und Management - Cologne**\n",
     "\n",
