Completion after lecture 04

--- a/20200328 - 03 - Einführung Python.ipynb
+++ b/20200328 - 03 - Einführung Python.ipynb
@@ -1731,11 +1731,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, that doesn't work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_fermat(a, b, c, n):\n",
+    "    if ((a**n + b**n == c**n) and n>2):\n",
+    "        print('Holy smokes, Fermat was wrong!')\n",
+    "    else: print(\"No, that doesn't work.\")\n",
+    "\n",
+    "check_fermat(2,3,4,15) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recurse(n, s):\n",
+    "    \"\"\"\n",
+    "    This is a recursive function\n",
+    "    \"\"\"\n",
     "    if n == 0:\n",
     "        print(s)\n",
     "    else:\n",
@@ -1744,7 +1769,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n"
+     ]
+    }
+   ],
+   "source": [
+    "recurse(10, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1754,6 +1796,7 @@
       "Help on function recurse in module __main__:\n",
       "\n",
       "recurse(n, s)\n",
+      "    This is a recursive function\n",
       "\n"
      ]
     }
